k8s/fs-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fs-api
  template:
    metadata:
      labels:
        app: fs-api
    spec:
      containers:
        - name: fs-api
          image: fs-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5

          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 5
