k8s/fs-mongo-deployment.yaml
# ========================
# MongoDB Deployment
# ========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fs-mongo
  template:
    metadata:
      labels:
        app: fs-mongo
    spec:
      containers:
        - name: fs-mongo
          image: mongo:7
          volumeMounts:
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-init
          configMap:
            name: fs-mongo-initjs
