k8s/fs-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fs-api
spec:
  type: NodePort
  selector:
    app: fs-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30010
