k8s/fs-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fs-frontend
spec:
  type: NodePort
  selector:
    app: fs-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
